--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axois": "^0.0.1-security",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
